# KafkaInspector

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
crates/ki-core/: Cargo.toml
crates/ki-core/src/: lib.rs  rt.rs
crates/ki-egui/: Cargo.toml
crates/ki-egui/src/: main.rs
crates/ki-tauri/: Cargo.toml  tauri.conf.json
crates/ki-tauri/src/: lib.rs  main.rs  tasks.rs
dev/: kafka-create-topic.sh  kafka-produce.sh  kafka-run.sh
dev/docker/: docker-compose-kafka.yaml
ui/: angular.json  package.json
ui/src/: index.html
ui/src/app/: app-state.service.ts  app.component.css  app.component.html  app.component.ts  app.routes.ts  channels.service.ts  main.css  reconnect.guard.ts  types.ts
ui/src/app/components/connect-to-cluster/: connect-to-cluster.component.html  connect-to-cluster.component.ts
ui/src/app/components/status-bar/: status-bar.component.css  status-bar.component.html  status-bar.component.ts
ui/src/app/components/table/: table.component.css  table.component.html  table.component.ts
ui/src/app/components/topic-list/: topic-list.component.html  topic-list.component.ts
ui/src/app/services/: connect-to-cluster.service.ts
