[package]
name = "kafka_inspector_v2"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "kafka_inspector_v2_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
ki-core = { path = "../ki-core" }
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.39.3", features = ["rt"] }
